attempting to fix paralax - buggy on iphone

--- a/css/style.css
+++ b/css/style.css
@@ -144,7 +144,7 @@ a.pure-button-primary {
  */
 
 .splash-wrapper {
-    background: url("../img/splash.jpg") no-repeat center center fixed;
+    background: url("../img/splash.jpg") no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
